# python-kirameki

./: .gitignore  Makefile  pyproject.toml  setup.py
docs/: conf.py  extras.rst  index.rst
src/kirameki/: __init__.py  _base.py  _priority.py  exc.py  extras.py  flask_ext.py  migrate.py  rows.py  testing.py
src/kirameki/pool/: __init__.py  _base.py  _priority.py
src/kirameki/queryset/: _parse.py
tests/: conftest.py  test_extras.py  test_flask_ext.py  test_migrate.py  test_row.py  test_testing.py
tests/casefiles/migrate/test_pyloader/validate_0/test_module/migrations/: m_1618113091_initial.py  m_1618113298_one.py  m_1618113302_two.py  m_1618113304_three.py
tests/queryset/: test_parse.py
