[tool.setuptools_scm]
write_to = "src/kirameki/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals --cov=kirameki --cov-report=html"
filterwarnings = ["error"]
markers = ["conn_args"]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
]

[build-system]
requires = ["setuptools >= 41.0", "wheel", "setuptools_scm[toml] >= 3.4"]
build-backend = "setuptools.build_meta"
