[tool.setuptools_scm]
write_to = "src/kirameki/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals --ignore=tests/casefiles"
filterwarnings = ["error"]
markers = ["conn_args", "casedirs"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["kirameki"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.23.0
isolated_build = true
envlist = py{37,38,39-cover},htmlcov

[testenv]
passenv = PG*
extras = test
commands = pytest -q {posargs}

[testenv:py39-cover]
usedevelop = true
commands = pytest -q --cov --cov-report= {posargs}

[testenv:htmlcov]
skip_install = true
deps = coverage[toml]
commands = coverage html
"""

[build-system]
requires = ["setuptools >= 56.0", "wheel", "setuptools_scm[toml] >= 6.0.0"]
build-backend = "setuptools.build_meta"
